Alinhamento do conteúdo na página de curiosidades

--- a/curiosidades.css
+++ b/curiosidades.css
@@ -16,6 +16,10 @@
     width: 60rem;
     max-width: 100%;
     padding: 0 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #intro-card {
