--- a/home.css
+++ b/home.css
@@ -430,8 +430,7 @@
 
 .feedback-form-container {
     background-color: var(--pure-white);
-    width: 100%;
-    max-width: 100rem;
+    width: 50rem;
     height: auto;
     margin: 4rem 0 0 0 !important;
     padding: 1rem 0;    
@@ -535,6 +534,13 @@
 
     #landing-btn {
         margin-top: 2rem;
+    }
+}
+
+@media (max-width: 850px){
+    
+    .feedback-form-container {
+        width: 35rem;
     }
 }
 
@@ -683,6 +689,18 @@
     .info-control:nth-child(4) {
         border-left: 6px solid var(--forest-green) !important;
         border-radius: 20px !important;
+    }
+
+    
+    .feedback-form-container {
+        width: 30rem;
+    }
+}
+
+@media (max-width: 560px){
+    
+    .feedback-form-container {
+        width: 30rem;
     }
 }
 
