Alinhamento dos objetos na página de curiosidades

--- a/curiosidades.css
+++ b/curiosidades.css
@@ -63,6 +63,8 @@
 .objetos-info {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 2rem;
 }
 
